# mtnmomoapi

./: .env.example  .gitignore  LICENSE.txt  README.md  app.py  pyproject.toml  setup.cfg  setup.py
example/: app.py
mtnmomo/: __main__.py  cli.py  client.py  collection.py  config.py  disbursement.py  remittance.py  utils.py
mtnmomoapi/: collection.py
src/mtnmomoapi/: collection.py  disbursement.py
