[metadata]
name= mtnmomoapi
version = 0.0.6
license= MIT license
author = Mathews Musukuma
author_email = sikaili99@gmail.com
description = An easy to use Python wrapper for the MTN MoMo API.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sikaili99/mtnmomoapi
project_urls =
    Bug Tracker = https://github.com/sikaili99/mtnmomoapi/issues
    repository = https://github.com/sikaili99/mtnmomoapi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src